--- a/ProgettoOrologio2/src/app/orologio/orologio.component.html
+++ b/ProgettoOrologio2/src/app/orologio/orologio.component.html
@@ -1,4 +1,4 @@
-<div class="clock">
+<div class="clockContainer">
   <div id="hour" class="hand hour"></div>
   <div id="minute" class="hand minute"></div>
   <div id="second" class="hand second"></div>
