Aggiunto background sfocato 0.8 e animazioni per h1 e h2

--- a/banfi/src/app/app.component.html
+++ b/banfi/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div style="text-align: center">
-  <h1>Welcome to {{ title }}!</h1>
-  <app-weather-clock></app-weather-clock>
+<div class="weather-background">
+  <div style="text-align: center">
+    <h1 class="page-title">Orologio e Meteo!</h1>
+    <app-weather-clock></app-weather-clock>
+  </div>
 </div>
