--- a/banfi/src/app/weather-clock/weather-clock.component.html
+++ b/banfi/src/app/weather-clock/weather-clock.component.html
@@ -1,10 +1,12 @@
-<div>
-    <h2>Weather & Time</h2>
-    <input type="text" [(ngModel)]="city" placeholder="Enter city">
+<div class="weather-background">
+  <div class="weather-clock-container">
+    <h2 class="page-title">Weather & Time</h2>
+    <input type="text" [(ngModel)]="city" placeholder="Enter city" />
     <button (click)="getWeatherAndTime()">Get Weather & Time</button>
-    <div *ngIf="weather || time">
-      <p>Weather: {{ weather }}</p>
-      <p>Time: {{ time }}</p>
+    <div *ngIf="weather || time" class="weather-info" [ngClass]="{'hidden': !weather && !time}">
+      <p><strong>Weather:</strong> {{ weather }}</p>
+      <p><strong>Temperature:</strong> {{ temperature }}°C</p>
+      <p><strong>Time:</strong> {{ time }}</p>
     </div>
   </div>
-  
+</div>
