--- a/progettoOrologioCondiviso/src/app/orologio/orologio.component.css
+++ b/progettoOrologioCondiviso/src/app/orologio/orologio.component.css
@@ -1,44 +1,37 @@
-
 .clockContainer {
   position: relative;
   margin: auto;
-  height: 40vw;
-  /*to make the height and width responsive*/
-  width: 40vw;
+  height: 30vh; /* Riduci l'altezza a 30% dell'altezza della viewport */
+  width: 30vh; /* Riduci la larghezza a 30% dell'altezza della viewport per mantenere proporzioni quadrate */
   background: url(https://media.geeksforgeeks.org/wp-content/uploads/20210302161254/imgonlinecomuaCompressToSizeOmNATjUMFKw-300x300.jpg) no-repeat;
-  /*setting our background image*/
-  background-size: 100%;
-  }
-  
-  .hour,
-  .minute,
-  .second {
+  background-size: cover; /* Modifica: Utilizza cover per adattare l'immagine */
+}
+
+.hour,
+.minute,
+.second {
   position: absolute;
   background: black;
   border-radius: 10px;
   transform-origin: bottom;
-  }
-  
-  .hour {
-  width: 1.8%;
-  height: 25%;
-  top: 25%;
-  left: 48.85%;
-  opacity: 0.8;
-  }
-  
-  .minute {
-  width: 1.6%;
-  height: 30%;
-  top: 19%;
-  left: 48.9%;
-  opacity: 0.8;
-  }
-  
-  .second {
-  width: 1%;
-  height: 40%;
-  top: 9%;
-  left: 49.25%;
-  opacity: 0.8;
-  }
+  left: 50%;
+  transform: translateX(-50%); /* Centra orizzontalmente */
+}
+
+.hour {
+  width: 1.2%; /* Riduci la larghezza dell'ora */
+  height: 20%; /* Riduci l'altezza dell'ora */
+  top: 30%; /* Posiziona l'ora al centro verticale */
+}
+
+.minute {
+  width: 1%; /* Riduci la larghezza del minuto */
+  height: 25%; /* Riduci l'altezza del minuto */
+  top: 20%; /* Posiziona il minuto leggermente più in alto */
+}
+
+.second {
+  width: 0.8%; /* Riduci la larghezza del secondo */
+  height: 35%; /* Riduci l'altezza del secondo */
+  top: 10%; /* Posiziona il secondo leggermente più in alto */
+}
