--- a/banfi/src/app/analog-clock/analog-clock.component.html
+++ b/banfi/src/app/analog-clock/analog-clock.component.html
@@ -1,15 +1,3 @@
-<div class="clock">
-  <div
-    class="hand hour"
-    [ngStyle]="{ transform: 'rotate(' + hourHand + 'deg)' }"
-  ></div>
-  <div
-    class="hand minute"
-    [ngStyle]="{ transform: 'rotate(' + minuteHand + 'deg)' }"
-  ></div>
-  <div
-    class="hand second"
-    [ngStyle]="{ transform: 'rotate(' + secondHand + 'deg)' }"
-  ></div>
-  <div class="center"></div>
+<div class="digital-clock">
+  <h2>{{ time }}</h2>
 </div>
