--- a/banfi/src/app/weather-clock/weather-clock.component.css
+++ b/banfi/src/app/weather-clock/weather-clock.component.css
@@ -9,7 +9,7 @@ body, html {
 }
 
 .weather-background {
-  background-image: url('C:/Users/banfi/OneDrive/Desktop/METEOprog/orologio_gruppo4/banfi/src/assets/sfondoMETEO.jpg');
+  background-image: url('https://www.comune.pandino.cr.it/sites/default/files/2018-07/meteo.jpg');
   background-size: cover;
   background-position: center;
   width: 100%;
